# gateway

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakeUserPresets.json  _fix_diag_msgs.py  _tmp_decode_diag.py  _tmp_extract.py  _tmp_hexline.py  _tmp_repr.py  appconfig.cpp  appconfig.h  applogger.cpp  applogger.h  appversion.cpp  appversion.h  changegatewayiddialog.cpp  changegatewayiddialog.h  checkbox_resources.qrc  checkboxstyle.h  d  filemonitorservice.cpp  filemonitorservice.h  gateway_dev.qss.example  gatewayapiclient.cpp  gatewayapiclient.h  gatewayhttpserver.cpp  gatewayhttpserver.h  gatewaypresencecontroller.cpp  gatewaypresencecontroller.h  gatewaysingleinstance.cpp  gatewaysingleinstance.h  gatewayupdatecontroller.cpp  gatewayupdatecontroller.h  groupmanagepage.cpp  groupmanagepage.h  groupmanagepage.ui  installscriptprocessor.cpp  installscriptprocessor.h  legacycryptoutil.cpp  legacycryptoutil.h  (+50 more)
.github/: copilot-instructions.md
docs/: 单文件打包指南.md
gateway_update_helper/: CMakeLists.txt  main.cpp
scripts/: RebuildGatewayQt5.ps1  build_qt_static_5_15.bat  build_qt_static_6_11_0.bat  build_single_file.bat  build_single_file.ps1  generate_install_script_template_seed.cmd  generate_install_script_template_seed.ps1  rebuild_gateway_static_release.bat  rebuild_gateway_static_release_qt5.bat
scripts/file_monitor_test_samples/: 00_使用说明.txt  代付测试.txt
scripts/file_monitor_test_samples/平台验证/充值二维码/充值提交/: 游戏扫码示例.txt
scripts/file_monitor_test_samples/平台验证/充值二维码/充值记录/: 充值记录.txt
scripts/file_monitor_test_samples/平台验证/充值二维码/普通充值/: 普通充值.txt
scripts/file_monitor_test_samples/平台验证/微信密保/提交数据/: 1001_绑定测试.txt  1001_解绑测试.txt  1001_验证测试.txt
scripts/file_monitor_test_samples/平台验证/微信密保/认证数据/: 1001_战士_WXID.txt  1001_战士_WXNC.txt
scripts/file_monitor_test_samples/平台验证/微信转区/提交转区数据/: 1001_转区扣除.txt  1001_转区查询.txt  1001_转区申请.txt  1001_转区转移.txt
scripts/file_monitor_test_samples/平台验证/微信转区/转区点扣除/: openid_1001_分区1_player001.txt
scripts/file_monitor_test_samples/平台验证/微信转区/转区点查询/: openid_1001_分区1_player001.txt
testdata/filemonitor/: README.txt  paid_sample.txt
testdata/filemonitor/平台验证/充值二维码/充值提交/: scan_sample.txt
testdata/filemonitor/平台验证/充值二维码/充值记录/: 充值记录.txt
testdata/filemonitor/平台验证/充值二维码/普通充值/: 普通充值.txt
testdata/filemonitor/平台验证/微信密保/提交数据/: 1001_mb_bind.txt
testdata/filemonitor/平台验证/微信密保/认证数据/: 1001_角色张三_WXID.txt  1001_角色张三_WXNC.txt
testdata/filemonitor/平台验证/微信转区/提交转区数据/: 1001_zq_query.txt
testdata/filemonitor/平台验证/微信转区/转区点查询/: q1_q2_player_zq_01.txt
tools/: README_7zr.txt  tools_embed_7za.qrc  tools_embed_7zr.qrc
tools/qr_mir_parity/: LegacyMirFromUrl.ps1  VerifyQrMirParity.ps1  dump_main.cpp
tools/qr_mir_parity/matrix_dump/: MatrixDump.csproj  Program.cs
tools/qr_mir_parity/reference/: Program.cs  QrMirParityReference.csproj
